[ch-code-refactor-#162272039]Pupulate admindashboard with api data

--- a/UI/index.html
+++ b/UI/index.html
@@ -106,7 +106,7 @@
         </button>
         <div class="links">
           <p class="default">Already have an account?</p>
-          <a href="./pages/Login.html" class="link"
+          <a href="/login" class="link"
             >Login</a
           >
         </div>
