--- a/UI/pages/AdminLogin.html
+++ b/UI/pages/AdminLogin.html
@@ -20,7 +20,7 @@
       href="../css/main.css"
     />
     <link rel="stylesheet" href="../css/auth.css" />
-    <script src="../js/main.js"></script>
+    <script src="../front-end/checktoken.js"></script>
   </head>
 
   <body>
