--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -58,23 +58,14 @@
         <button
           class="btn btn-primary"
           type="button"
-          href="./ClientDashboard.html"
           id="login-button"
         >
           Login
         </button>
         <div class="links">
-          <a href="../index.html" class="link"
+          <a href="/signup" class="link"
             >Create new account</a
           >
-        </div>
-        <div style="text-align: center">
-          <p style="color:#332e73; padding: 10px 0px;">
-            Or
-          </p>
-        </div>
-        <div class="links">
-          <a href="./AdminLogin.html" class="link">Admin</a>
         </div>
       </div>
     </section>
