--- a/UI/pages/newparcel.html
+++ b/UI/pages/newparcel.html
@@ -30,6 +30,7 @@
       media="screen"
       href="../css/newOrder.css"
     />
+    <script src="../front-end/checktoken.js"></script>
   </head>
 
   <body>
