--- a/UI/pages/client.html
+++ b/UI/pages/client.html
@@ -21,188 +21,141 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../css/loading.css">
+    <script src="../front-end/checktoken.js"></script>
   </head>
 
   <body>
-    <section class="left side-nav">
-      <div class="top">
+    <section>
+      <section class="left side-nav">
+        <div class="top">
+          <div class="logo-container">
+            <img src="../assets/icons/send.svg" alt="lg" srcset="" />
+            <h3>SendIT</h3>
+          </div>
+          <div class="sidebar-links">
+            <a href="#" class="nav-link active">
+              <img src="../assets/icons/home-light.svg" alt="" srcset="" class="xlg-icon" />
+              <span>Home</span>
+            </a>
+            <a href="/parcels/new" class="nav-link ">
+              <img src="../assets/icons/plus-light.svg" alt="" srcset="" class="xlg-icon" />
+              <span>Add Order</span>
+            </a>
+            <a href="/parcels/in_transit" class="nav-link">
+              <img src="../assets/icons/moving-truck-light.svg" alt="" srcset="" class="xlg-icon" />
+              <span>Transit</span>
+            </a>
+            <a href="#" class="nav-link logout">
+              <img src="../assets/icons/logout.svg" alt="" srcset="" class="xlg-icon" />
+              <span>Logout</span>
+            </a>
+          </div>
+        </div>
+        <div class="down-link" id="lg-logout">
+          <img src="../assets/icons/logout.svg" alt="lg" srcset="" />
+          <a class="nav-link">Logout</a>
+        </div>
+      </section>
+      <section class="right top-nav">
         <div class="logo-container">
-          <img
-            src="../assets/icons/send.svg"
-            alt="lg"
-            srcset=""
-          />
+          <img src="../assets/icons/send.svg" alt="lg" srcset="" />
           <h3>SendIT</h3>
         </div>
-        <div class="sidebar-links">
-          <a href="#" class="nav-link active">
-            <img
-              src="../assets/icons/home-light.svg"
-              alt=""
-              srcset=""
-              class="xlg-icon"
-            />
-            <span>Home</span>
-          </a>
-          <a href="/parcels/new" class="nav-link ">
-            <img
-              src="../assets/icons/plus-light.svg"
-              alt=""
-              srcset=""
-              class="xlg-icon"
-            />
-            <span>Add Order</span>
-          </a>
-          <a href="/parcels/in_transit" class="nav-link">
-            <img
-              src="../assets/icons/moving-truck-light.svg"
-              alt=""
-              srcset=""
-              class="xlg-icon"
-            />
-            <span>Transit</span>
-          </a>
-          <a href="#" class="nav-link logout">
-            <img
-              src="../assets/icons/logout.svg"
-              alt=""
-              srcset=""
-              class="xlg-icon"
-            />
-            <span>Logout</span>
-          </a>
-        </div>
-      </div>
-      <div class="down-link" id="lg-logout">
-        <img
-          src="../assets/icons/logout.svg"
-          alt="lg"
-          srcset=""
-        />
-        <a class="nav-link">Logout</a>
-      </div>
-    </section>
-    <section class="right top-nav">
-      <div class="logo-container">
-        <img
-          src="../assets/icons/send.svg"
-          alt="lg"
-          srcset=""
-        />
-        <h3>SendIT</h3>
-      </div>
-      <div class="right">
-        <div class="topbar-content">
-          <img
-            src="../assets//images/1.jpg"
-            alt="profile"
-            srcset=""
-            class="sm-circle profile"
-          />
-          <div class="names" id="user-names">
+        <div class="right">
+          <div class="topbar-content">
+            <img src="../assets//images/1.jpg" alt="profile" srcset="" class="sm-circle profile" />
+            <div class="names" id="user-names">
+            </div>
+            <img src="../assets/icons/notification-bell.svg" alt="" srcset="" class="notification" />
           </div>
-          <img
-            src="../assets/icons/notification-bell.svg"
-            alt=""
-            srcset=""
-            class="notification"
-          />
-        </div>
-        <div class="mob-dropdown">
-          <div
-            class="dropdown-icon"
-            onclick="showMenu(this)"
-          >
-            <img
-              src="../assets/icons/down-arrow.svg"
-              alt=">>"
-              srcset=""
-              class="md-icon"
-            />
-          </div>
-          <div class="dropdown-content" id="drp-conent">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="/parcels/new">New</a></li>
-              <li>
-                <a href="/parcels/in_transit">Transit</a>
-              </li>
-              <li><a href="/Login">Logout</a></li>
-            </ul>
+          <div class="mob-dropdown">
+            <div class="dropdown-icon" onclick="showMenu(this)">
+              <img src="../assets/icons/down-arrow.svg" alt=">>" srcset="" class="md-icon" />
+            </div>
+            <div class="dropdown-content" id="drp-conent">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="/parcels/new">New</a></li>
+                <li>
+                  <a href="/parcels/in_transit">Transit</a>
+                </li>
+                <li><a href="/Login">Logout</a></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="content">
+      </section>
+      <section class="content">
         <div id="loader">loading..</div>
         <di id="loaded-data">
-            <div class="row">
-                <div class="col-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-title">
-                                <img src="../assets/icons/storage-box.svg" alt=">>" srcset="" class="lg-icon" />
-                                <h4>All</h4>
-                            </div>
-                            <hr />
-                            <div class="item-counter">
-                                <h5>50</h5>
-                            </div>
-                        </div>
-                    </div>
+          <div class="row">
+            <div class="col-4">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-title">
+                    <img src="../assets/icons/storage-box.svg" alt=">>" srcset="" class="lg-icon" />
+                    <h4>All</h4>
+                  </div>
+                  <hr />
+                  <div class="item-counter">
+                    <h5 id="all-parcels">50</h5>
+                  </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-title">
-                                <img src="../assets/icons/delivered.svg" alt=">>" srcset="" class="lg-icon" />
-                                <h4>Delivered</h4>
-                            </div>
-                            <hr />
-                            <div class="item-counter">
-                                <h5>43</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-title">
-                                <img src="../assets/icons/shipped.svg" alt=">>" srcset="" class="lg-icon" />
-                                <h4>In Transit</h4>
-                            </div>
-                            <hr />
-                            <div class="item-counter">
-                                <h5>7</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
-            <h3 class="title centered-text">
-                All Parcel Deliveries
-            </h3>
-            <div class="lg-card">
-                <div class="lg-card-content">
-                    <div class="data-table">
-                        <table id="user-parcels">
-                            <tr>
-                                <th>Pickup</th>
-                                <th>Address</th>
-                                <th>Destination</th>
-                                <th>Address</th>
-                                <th>Description</th>
-                                <th>Sent At</th>
-                                <th>Delivered At</th>
-                                <th>Price</th>
-                                <th>Status</th>
-                            </tr>
-                        </table>
-                    </div>
+            <div class="col-4">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-title">
+                    <img src="../assets/icons/delivered.svg" alt=">>" srcset="" class="lg-icon" />
+                    <h4>Delivered</h4>
+                  </div>
+                  <hr />
+                  <div class="item-counter">
+                    <h5 id="delivered-parcels">43</h5>
+                  </div>
                 </div>
+              </div>
             </div>
-        </div>
+            <div class="col-4">
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-title">
+                    <img src="../assets/icons/shipped.svg" alt=">>" srcset="" class="lg-icon" />
+                    <h4>In Transit</h4>
+                  </div>
+                  <hr />
+                  <div class="item-counter">
+                    <h5 id="intransit-parcels">7</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h3 class="title centered-text">
+            All Parcel Deliveries
+          </h3>
+          <div class="lg-card">
+            <div class="lg-card-content">
+              <div class="data-table">
+                <table id="user-parcels">
+                  <tr>
+                    <th>Pickup</th>
+                    <th>Address</th>
+                    <th>Destination</th>
+                    <th>Address</th>
+                    <th>Description</th>
+                    <th>Sent At</th>
+                    <th>Delivered At</th>
+                    <th>Price</th>
+                    <th>Status</th>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+          </div>
+      </section>
     </section>
     <script src="../front-end/jquery.min.js"></script>
     <script src="../js/main.js"></script>
