--- a/UI/pages/intransit.html
+++ b/UI/pages/intransit.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
     <link rel="stylesheet" href="../css/inTransit.css">
     <link rel="stylesheet" href="../css/loading.css">
+    <script src="../front-end/checktoken.js"></script>
 </head>
 
 <body>
