--- a/pages/Login.html
+++ b/pages/Login.html
@@ -58,6 +58,12 @@
           href="./AdminDashboard.html"
           >Login</a
         >
+        <div style="text-align: center">
+          <p style="color:#332e73; padding: 10px 0px;">Or</p>
+        </div>
+        <div class="links">
+          <a href="./AdminDashboard.html" class="link">Admin</a>
+        </div>
       </div>
     </section>
   </body>
