--- a/pages/Login.html
+++ b/pages/Login.html
@@ -55,7 +55,7 @@
         <a
           class="btn btn-primary"
           type="button"
-          href="./AdminDashboard.html"
+          href="./ClientDashboard.html"
           >Login</a
         >
         <div style="text-align: center">
