--- a/pages/Login.html
+++ b/pages/Login.html
@@ -58,6 +58,11 @@
           href="./ClientDashboard.html"
           >Login</a
         >
+        <div class="links">
+          <a href="../index.html" class="link"
+            >Create new account</a
+          >
+        </div>
         <div style="text-align: center">
           <p style="color:#332e73; padding: 10px 0px;">Or</p>
         </div>
