[ft-email-notification-#161930370] Integrated mailgun

--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>SendIt -Login</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
       href="../assets/icons/favicon.ico"
@@ -20,17 +17,12 @@
       href="../css/main.css"
     />
     <link rel="stylesheet" href="../css/auth.css" />
-    <script src="../js/main.js"></script>
   </head>
 
   <body>
     <section class="container auth" id="login">
       <div class="logo">
-        <img
-          src="../assets/icons/primary-send.svg"
-          alt="logo"
-          srcset=""
-        />
+        <img src="../assets/icons/primary-send.svg" alt="logo" srcset="" />
         <h1>SendIT</h1>
       </div>
       <div class="col-3 form">
@@ -55,17 +47,11 @@
           <div class="errors"></div>
         </div>
         <div class="errors" id="auth-error"></div>
-        <button
-          class="btn btn-primary"
-          type="button"
-          id="login-button"
-        >
+        <button class="btn btn-primary" type="button" id="login-button">
           Login
         </button>
         <div class="links">
-          <a href="/signup" class="link"
-            >Create new account</a
-          >
+          <a href="/signup" class="link">Create new account</a>
         </div>
       </div>
     </section>
