[ft-pwd-recovery-#163388780] Add password recovery

--- a/UI/pages/password_recovery.html
+++ b/UI/pages/password_recovery.html
@@ -26,37 +26,29 @@
         <img src="../assets/icons/primary-send.svg" alt="logo" srcset="" />
         <h1>SendIT</h1>
       </div>
-      <div class="col-3 form">
+      <div class="col-3 form" id="pwd-recovery-form">
         <div class="labeled-input">
           <label for="email">Email</label>
           <input
             type="email"
-            name="email"
-            id="login-email"
+            name="confirm-password"
             class="custom-input"
+            id="recovery-email"
+            oninput="clearError()"
           />
-          <div class="errors"></div>
+          <div class="errors" id="recovery-error" style="color: red; "></div>
         </div>
-        <div class="labeled-input">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            name="password"
-            id="login-password"
-            class="custom-input"
-          />
-          <div class="errors"></div>
-        </div>
-        <div class="errors" id="auth-error"></div>
-        <button class="btn btn-primary" type="button" id="login-button">
-          Login
+        <button
+          class="btn btn-primary"
+          type="button"
+          id="submit-button"
+          onclick="submitEmail()"
+        >
+          Submit
         </button>
-        <div class="links">
-          <a href="/signup" class="link">Create new account</a> <br /><br />
-          <a href="/auth/password_recovery" class="link">Forget password?</a>
-        </div>
+        <div class="links"><a href="/login" class="link">login</a></div>
       </div>
     </section>
+    <script src="../front-end/passwordRecovery.js"></script>
   </body>
-  <script src="../front-end/login.js"></script>
 </html>
