--- a/UI/pages/reset_password.html
+++ b/UI/pages/reset_password.html
@@ -26,37 +26,27 @@
         <img src="../assets/icons/primary-send.svg" alt="logo" srcset="" />
         <h1>SendIT</h1>
       </div>
-      <div class="col-3 form">
+      <div class="col-3 form" id="pwd-reset-form">
         <div class="labeled-input">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            name="email"
-            id="login-email"
-            class="custom-input"
-          />
-          <div class="errors"></div>
+          <label for="email">Password</label>
+          <input type="password" name="confirm-password" class="custom-input" />
         </div>
         <div class="labeled-input">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            name="password"
-            id="login-password"
-            class="custom-input"
-          />
-          <div class="errors"></div>
+          <label for="email">Password</label>
+          <input type="password" name="confirm-password" class="custom-input" />
         </div>
-        <div class="errors" id="auth-error"></div>
-        <button class="btn btn-primary" type="button" id="login-button">
-          Login
+        <div class="errors" id="reset-error" style="color: red;"></div>
+        <button
+          class="btn btn-primary"
+          type="button"
+          id="submit-button"
+          onclick="submitPwd()"
+        >
+          Send
         </button>
-        <div class="links">
-          <a href="/signup" class="link">Create new account</a> <br /><br />
-          <a href="/auth/password_recovery" class="link">Forget password?</a>
-        </div>
+        <div class="links"><a href="/login" class="link">login</a></div>
       </div>
     </section>
+    <script src="../front-end/passwordReset.js"></script>
   </body>
-  <script src="../front-end/login.js"></script>
 </html>
